--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.4",
     "i18next": "^23.11.5",
     "next": "^14.2.4",
     "next-i18next": "^15.3.0",
