--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "private": true,
   "author": "alithemes",
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "sass": "sass --watch public/assets/scss/main.scss:public/assets/css/main.css"
   },
   "dependencies": {
+    "@blocknote/core": "^0.15.6",
+    "@blocknote/mantine": "^0.15.6",
+    "@blocknote/react": "^0.15.6",
+    "@blocknote/server-util": "^0.15.6",
     "aos": "^2.3.4",
     "axios": "^1.7.4",
+    "country-state-city": "^3.2.1",
+    "date-fns": "^3.6.0",
     "i18next": "^23.11.5",
     "next": "^14.2.4",
     "next-i18next": "^15.3.0",
+    "nextjs-toploader": "^3.6.15",
     "react": "18.2.0",
     "react-curved-text": "^3.0.0",
     "react-dom": "18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-i18next": "^14.1.2",
     "react-modal-video": "^2.0.1",
     "react-router-hash-link": "^2.4.3",
