--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "2.0.0",
   "private": true,
   "author": "alithemes",
+ 
+  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,6 +17,7 @@
     "@blocknote/mantine": "^0.15.6",
     "@blocknote/react": "^0.15.6",
     "@blocknote/server-util": "^0.15.6",
+    "antd": "^5.21.3",
     "aos": "^2.3.4",
     "axios": "^1.7.4",
     "country-state-city": "^3.2.1",
@@ -23,6 +26,7 @@
     "next": "^14.2.4",
     "next-i18next": "^15.3.0",
     "nextjs-toploader": "^3.6.15",
+    "rc-util": "^5.43.0",
     "react": "18.2.0",
     "react-curved-text": "^3.0.0",
     "react-dom": "18.2.0",
@@ -30,6 +34,7 @@
     "react-i18next": "^14.1.2",
     "react-modal-video": "^2.0.1",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^10.0.5",
     "sass": "^1.69.5",
     "swiper": "^11.1.14",
     "wowjs": "^1.1.3"
