--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "2.0.0",
   "private": true,
   "author": "alithemes",
- 
-  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -32,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-flags-select": "^2.2.3",
     "react-i18next": "^14.1.2",
+    "react-loader-spinner": "^6.1.6",
     "react-modal-video": "^2.0.1",
     "react-router-hash-link": "^2.4.3",
     "react-toastify": "^10.0.5",
