move to add swiper effect to home page service section create new branch swiper

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-modal-video": "^2.0.1",
     "react-router-hash-link": "^2.4.3",
+    "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.69.5",
     "swiper": "^11.1.14",
