--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "react-dom": "18.2.0",
     "react-flags-select": "^2.2.3",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal-video": "^2.0.1",
     "react-router-hash-link": "^2.4.3",
+    "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "wowjs": "^1.1.3"
   }
